// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`productdatafeed generates a feed for facebookcommerce 1`] = `
"id,title,description,rich_text_description,image_link,additional_image_link,link,price,sale_price,condition,gtin,brand,unit_pricing_measure,availability,google_product_category
43226647,Apple Juice (1l),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",\\"[\\"\\"<p>Fell straight from the tree, on to Newton’s head, then into the bottle. The autumn taste of English apples. Brought to you by gravity.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
80884671,Apple Juice (2l),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",\\"[\\"\\"<p>Fell straight from the tree, on to Newton’s head, then into the bottle. The autumn taste of English apples. Brought to you by gravity.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
93855755,Apple Juice (500ml),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",\\"[\\"\\"<p>Fell straight from the tree, on to Newton’s head, then into the bottle. The autumn taste of English apples. Brought to you by gravity.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
27512590,Banana Juice (1l),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",\\"[\\"\\"<p>Build your protein the natural way, with exotic banana juice made from ripe fruit and packed with all the goodness of the tropical sun.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
40636347,Banana Juice (2l),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",\\"[\\"\\"<p>Build your protein the natural way, with exotic banana juice made from ripe fruit and packed with all the goodness of the tropical sun.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
45328412,Banana Juice (500ml),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",\\"[\\"\\"<p>Build your protein the natural way, with exotic banana juice made from ripe fruit and packed with all the goodness of the tropical sun.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
21438542,Bean Juice (2l),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",\\"[\\"\\"<p>Bean there, drunk that! The energy drink for the health-conscious. Brand new bean juice; from allotment to bottle in under 8 hours.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
57211177,Bean Juice (500ml),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",\\"[\\"\\"<p>Bean there, drunk that! The energy drink for the health-conscious. Brand new bean juice; from allotment to bottle in under 8 hours.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
57423879,Bean Juice (1l),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",\\"[\\"\\"<p>Bean there, drunk that! The energy drink for the health-conscious. Brand new bean juice; from allotment to bottle in under 8 hours.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
19230637,Black Hoodie (XL),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",\\"[\\"\\"<p>Special offer. Buy a hood and get a free jet black sweater attached. Perfect for when you are up to no good.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
22119503,Black Hoodie (L),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",\\"[\\"\\"<p>Special offer. Buy a hood and get a free jet black sweater attached. Perfect for when you are up to no good.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
61630747,Black Hoodie (XXL),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",\\"[\\"\\"<p>Special offer. Buy a hood and get a free jet black sweater attached. Perfect for when you are up to no good.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
62783187,Black Hoodie (S),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",\\"[\\"\\"<p>Special offer. Buy a hood and get a free jet black sweater attached. Perfect for when you are up to no good.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
91406604,Black Hoodie (M),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",\\"[\\"\\"<p>Special offer. Buy a hood and get a free jet black sweater attached. Perfect for when you are up to no good.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
15744278,Blue Hoodie (S),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",\\"[\\"\\"<p>Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal for when you are out saving the world.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
21599567,Blue Hoodie (M),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",\\"[\\"\\"<p>Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal for when you are out saving the world.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
43313080,Blue Hoodie (XXL),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",\\"[\\"\\"<p>Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal for when you are out saving the world.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
51987722,Blue Hoodie (XL),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",\\"[\\"\\"<p>Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal for when you are out saving the world.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
65363253,Blue Hoodie (L),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",\\"[\\"\\"<p>Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal for when you are out saving the world.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
14925419,Carrot Juice (1l),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",\\"[\\"\\"<p>Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The sweet, orange nectar of Mother Earth.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
62426105,Carrot Juice (2l),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",\\"[\\"\\"<p>Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The sweet, orange nectar of Mother Earth.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
67882967,Carrot Juice (500ml),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",\\"[\\"\\"<p>Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The sweet, orange nectar of Mother Earth.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
3944859,Coconut Juice (500ml),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",\\"[\\"\\"<p>Did you know falling coconuts kill 150 people a year? But did you know that coconut juice is the new superfood? You win some, you lose some.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
5829405,Coconut Juice (1l),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",\\"[\\"\\"<p>Did you know falling coconuts kill 150 people a year? But did you know that coconut juice is the new superfood? You win some, you lose some.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
84725784,Coconut Juice (2l),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",\\"[\\"\\"<p>Did you know falling coconuts kill 150 people a year? But did you know that coconut juice is the new superfood? You win some, you lose some.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
118223591,Code Division T-shirt (L),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",\\"[\\"\\"<p>Pay homage to the music and art of a Joy Division and Peter Saville, but with a Mirumee twist. Perfect live transmission apparel for dead souls.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
3128223583,Code Division T-shirt (XXL),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",\\"[\\"\\"<p>Pay homage to the music and art of a Joy Division and Peter Saville, but with a Mirumee twist. Perfect live transmission apparel for dead souls.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
338223582,Code Division T-shirt (M),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",\\"[\\"\\"<p>Pay homage to the music and art of a Joy Division and Peter Saville, but with a Mirumee twist. Perfect live transmission apparel for dead souls.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
448323583,Code Division T-shirt (XL),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",\\"[\\"\\"<p>Pay homage to the music and art of a Joy Division and Peter Saville, but with a Mirumee twist. Perfect live transmission apparel for dead souls.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
988323583,Code Division T-shirt (S),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",\\"[\\"\\"<p>Pay homage to the music and art of a Joy Division and Peter Saville, but with a Mirumee twist. Perfect live transmission apparel for dead souls.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
698223581,Colored Parrot Cushion (55cm x 55cm),\\"Add a little color to your life with a Saleor parrot cushion. Turns any old sofa
into a rainbow of classy interior design.\\",\\"[\\"\\"<p>Add a little color to your life with a Saleor parrot cushion. Turns any old sofa into a rainbow of classy interior design.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cuschion01.png,,www.storefront.comcolored-parrot-cushion,5 USD,3 USD,new,,undefined,,in stock,
698223582,Colored Parrot Cushion (45cm x 45cm),\\"Add a little color to your life with a Saleor parrot cushion. Turns any old sofa
into a rainbow of classy interior design.\\",\\"[\\"\\"<p>Add a little color to your life with a Saleor parrot cushion. Turns any old sofa into a rainbow of classy interior design.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cuschion01.png,,www.storefront.comcolored-parrot-cushion,20 USD,12 USD,new,,undefined,,in stock,
30635751,Green Juice (2l),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",\\"[\\"\\"<p>Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel sprouts. All the greens you’ll ever need in one delicious juice.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,7 USD,6.3 USD,new,,undefined,2 KG,in stock,
60752428,Green Juice (500ml),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",\\"[\\"\\"<p>Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel sprouts. All the greens you’ll ever need in one delicious juice.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,5 USD,4.5 USD,new,,undefined,1 KG,in stock,
81470859,Green Juice (1l),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",\\"[\\"\\"<p>Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel sprouts. All the greens you’ll ever need in one delicious juice.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,5 USD,4.5 USD,new,,undefined,1 KG,in stock,
998423582,Hyperspace Turquoise Paint (1l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",\\"[\\"\\"<p>Turquoise is the new black. No more gloomy night skies, brighten up your evenings with hyperspace paint.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998423583,Hyperspace Turquoise Paint (2.5l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",\\"[\\"\\"<p>Turquoise is the new black. No more gloomy night skies, brighten up your evenings with hyperspace paint.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,30 USD,30 USD,new,,undefined,2.5 KG,in stock,
998423585,Hyperspace Turquoise Paint (5l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",\\"[\\"\\"<p>Turquoise is the new black. No more gloomy night skies, brighten up your evenings with hyperspace paint.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,49 USD,49 USD,new,,undefined,5 KG,in stock,
lake-tunes-cd,Lake Tunes (CD / Signed: Yes),Lake Tunes by Digital Audio.,\\"[\\"\\"<p>Lake Tunes by Digital Audio.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleor-digital-03_2.png,,www.storefront.comlake-tunes,9.99 USD,6 USD,new,,undefined,,in stock,
998323582,Light Speed Yellow Paint (1l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",\\"[\\"\\"<p>There is life in outer space. This vibrant light speed yellow paint brings life to any surface. Goes on easy and dries at light speed.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998323583,Light Speed Yellow Paint (2.5l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",\\"[\\"\\"<p>There is life in outer space. This vibrant light speed yellow paint brings life to any surface. Goes on easy and dries at light speed.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,30 USD,30 USD,new,,undefined,2.5 KG,in stock,
998323584,Light Speed Yellow Paint (5l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",\\"[\\"\\"<p>There is life in outer space. This vibrant light speed yellow paint brings life to any surface. Goes on easy and dries at light speed.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,49 USD,49 USD,new,,undefined,5 KG,in stock,
33963052,Mustard Hoodie (S),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",\\"[\\"\\"<p>Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping, wearing this hot as mustard hoodie.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
42651772,Mustard Hoodie (XXL),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",\\"[\\"\\"<p>Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping, wearing this hot as mustard hoodie.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
55365141,Mustard Hoodie (L),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",\\"[\\"\\"<p>Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping, wearing this hot as mustard hoodie.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
66846240,Mustard Hoodie (M),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",\\"[\\"\\"<p>Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping, wearing this hot as mustard hoodie.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
73186143,Mustard Hoodie (XL),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",\\"[\\"\\"<p>Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping, wearing this hot as mustard hoodie.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
546451996,Nebula Night Sky Paint (1l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",\\"[\\"\\"<p>Tonight, my love, let us take fat brushes and paint the skies with the shades of nebula tides. Get the dark, moody shades of the ether.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,15 USD,9 USD,new,,undefined,1 KG,in stock,
546451997,Nebula Night Sky Paint (2.5l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",\\"[\\"\\"<p>Tonight, my love, let us take fat brushes and paint the skies with the shades of nebula tides. Get the dark, moody shades of the ether.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,35 USD,21 USD,new,,undefined,2.5 KG,in stock,
546451999,Nebula Night Sky Paint (5l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",\\"[\\"\\"<p>Tonight, my love, let us take fat brushes and paint the skies with the shades of nebula tides. Get the dark, moody shades of the ether.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,49 USD,29.4 USD,new,,undefined,5 KG,in stock,
938323582,Orange Juice (1l),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",\\"[\\"\\"<p>Fell from a tree straight into the bottle. No additives, no preservatives, just the refreshing taste of pure sun-kissed Californian oranges.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
988323522,Orange Juice (2l),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",\\"[\\"\\"<p>Fell from a tree straight into the bottle. No additives, no preservatives, just the refreshing taste of pure sun-kissed Californian oranges.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
988323582,Orange Juice (500ml),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",\\"[\\"\\"<p>Fell from a tree straight into the bottle. No additives, no preservatives, just the refreshing taste of pure sun-kissed Californian oranges.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
43200242,Pineapple Juice (500ml),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",\\"[\\"\\"<p>I can’t stand pineapples, so this one is not for me. They have a weird, fluffy, tangy taste. But if it is your kind of thing, then knock yourself out.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
75799450,Pineapple Juice (2l),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",\\"[\\"\\"<p>I can’t stand pineapples, so this one is not for me. They have a weird, fluffy, tangy taste. But if it is your kind of thing, then knock yourself out.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
79129513,Pineapple Juice (1l),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",\\"[\\"\\"<p>I can’t stand pineapples, so this one is not for me. They have a weird, fluffy, tangy taste. But if it is your kind of thing, then knock yourself out.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
29716755,Polo Shirt (S),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",\\"[\\"\\"<p>Ever have those days where you feel a bit geometric? Can't quite shape yourself up right? Show your different sides with a Saleor styles.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
31352185,Polo Shirt (XL),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",\\"[\\"\\"<p>Ever have those days where you feel a bit geometric? Can't quite shape yourself up right? Show your different sides with a Saleor styles.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
50269944,Polo Shirt (L),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",\\"[\\"\\"<p>Ever have those days where you feel a bit geometric? Can't quite shape yourself up right? Show your different sides with a Saleor styles.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
66594736,Polo Shirt (M),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",\\"[\\"\\"<p>Ever have those days where you feel a bit geometric? Can't quite shape yourself up right? Show your different sides with a Saleor styles.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
85364796,Polo Shirt (XXL),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",\\"[\\"\\"<p>Ever have those days where you feel a bit geometric? Can't quite shape yourself up right? Show your different sides with a Saleor styles.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
43659438,Polo Shirt (XL),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",\\"[\\"\\"<p>Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that looks as good as you feel.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
44026421,Polo Shirt (S),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",\\"[\\"\\"<p>Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that looks as good as you feel.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
59014392,Polo Shirt (L),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",\\"[\\"\\"<p>Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that looks as good as you feel.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
60597697,Polo Shirt (XXL),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",\\"[\\"\\"<p>Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that looks as good as you feel.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
90892602,Polo Shirt (M),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",\\"[\\"\\"<p>Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that looks as good as you feel.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
17570141,Polo Shirt (XXL),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",\\"[\\"\\"<p>Wondering if this will look as good on you as it does on the screen? The answer is yes. A quality polo with smart styling.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
19402012,Polo Shirt (XL),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",\\"[\\"\\"<p>Wondering if this will look as good on you as it does on the screen? The answer is yes. A quality polo with smart styling.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
26592266,Polo Shirt (S),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",\\"[\\"\\"<p>Wondering if this will look as good on you as it does on the screen? The answer is yes. A quality polo with smart styling.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
36260498,Polo Shirt (M),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",\\"[\\"\\"<p>Wondering if this will look as good on you as it does on the screen? The answer is yes. A quality polo with smart styling.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
37558859,Polo Shirt (L),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",\\"[\\"\\"<p>Wondering if this will look as good on you as it does on the screen? The answer is yes. A quality polo with smart styling.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
46806935,Polo Shirt (M),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",\\"[\\"\\"<p>They say polo is the sport of kings. Or was that stamp collecting? Either way, this shirt is fit for a king of Saturday night.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
71103052,Polo Shirt (L),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",\\"[\\"\\"<p>They say polo is the sport of kings. Or was that stamp collecting? Either way, this shirt is fit for a king of Saturday night.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
84812015,Polo Shirt (XL),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",\\"[\\"\\"<p>They say polo is the sport of kings. Or was that stamp collecting? Either way, this shirt is fit for a king of Saturday night.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
89820261,Polo Shirt (XXL),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",\\"[\\"\\"<p>They say polo is the sport of kings. Or was that stamp collecting? Either way, this shirt is fit for a king of Saturday night.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
98530976,Polo Shirt (S),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",\\"[\\"\\"<p>They say polo is the sport of kings. Or was that stamp collecting? Either way, this shirt is fit for a king of Saturday night.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
70058446,Power Juice (500ml),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",\\"[\\"\\"<p>Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a bottle of our brand new power juice! Look at him go!</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
80696397,Power Juice (2l),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",\\"[\\"\\"<p>Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a bottle of our brand new power juice! Look at him go!</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
94044081,Power Juice (1l),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",\\"[\\"\\"<p>Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a bottle of our brand new power juice! Look at him go!</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
998223582,Red Dwarf Red Paint (1l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",\\"[\\"\\"<p>We are all connected to the universe, because every cell in our bodies was cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s dreams.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,15 USD,13.5 USD,new,,undefined,1 KG,in stock,
998223583,Red Dwarf Red Paint (2.5l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",\\"[\\"\\"<p>We are all connected to the universe, because every cell in our bodies was cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s dreams.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,25 USD,22.5 USD,new,,undefined,2.5 KG,in stock,
998223584,Red Dwarf Red Paint (5l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",\\"[\\"\\"<p>We are all connected to the universe, because every cell in our bodies was cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s dreams.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,49 USD,44.1 USD,new,,undefined,5 KG,in stock,
12312312321,Red Wine,\\"A fine, mature red with a hint of blackberry, an undertone of the alkaline
Burgundy soil, a delicate aftertaste of burnt garlic, and a whole lot of grapes.\\",\\"[\\"\\"<p>A fine, mature red with a hint of blackberry, an undertone of the alkaline Burgundy soil, a delicate aftertaste of burnt garlic, and a whole lot of grapes.</p>\\"\\"]\\",,,www.storefront.comred-wine,5 USD,3 USD,new,,undefined,,in stock,
sea-lullabies-mp3,Sea Lullabies (MP3),Sea Lullabies by Digital Audio.,\\"[\\"\\"<p>Sea Lullabies by Digital Audio.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleor-digital-03_1.png,,www.storefront.comsea-lullabies,9.99 USD,6 USD,new,,undefined,,in stock,
98616713,Seaman Beer,\\"Best beer on the seven seas. A dark ale for when the dark clouds gather
overhead. The nutty nautical taste that sailors love.\\",\\"[\\"\\"<p>Best beer on the seven seas. A dark ale for when the dark clouds gather overhead. The nutty nautical taste that sailors love.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_beer-01_2.png,,www.storefront.comseaman-beer,5 USD,5 USD,new,,undefined,1 KG,in stock,
98616712,Seaman Lager,\\"Find your sea legs and then lose the power to use them with extra strong
seaman’s lager. Don’t drink and sail, me hearties!\\",\\"[\\"\\"<p>Find your sea legs and then lose the power to use them with extra strong seaman’s lager. Don’t drink and sail, me hearties!</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_beer-02_2.png,,www.storefront.comseaman-lager,5 USD,4 USD,new,,undefined,1 KG,in stock,
998223591,Space Dust Navy Paint (1l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",\\"[\\"\\"<p>The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting freshness of color.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998223594,Space Dust Navy Paint (5l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",\\"[\\"\\"<p>The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting freshness of color.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,49 USD,49 USD,new,,undefined,1 KG,in stock,
998223599,Space Dust Navy Paint (2.5l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",\\"[\\"\\"<p>The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting freshness of color.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,25 USD,25 USD,new,,undefined,1 KG,in stock,
21522631,T-shirt (XXL),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",\\"[\\"\\"<p>A classic tee for a timeless look, at a great price. Feel like a million bucks without breaking the bank.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
28094954,T-shirt (L),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",\\"[\\"\\"<p>A classic tee for a timeless look, at a great price. Feel like a million bucks without breaking the bank.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
40232182,T-shirt (XL),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",\\"[\\"\\"<p>A classic tee for a timeless look, at a great price. Feel like a million bucks without breaking the bank.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
55101176,T-shirt (M),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",\\"[\\"\\"<p>A classic tee for a timeless look, at a great price. Feel like a million bucks without breaking the bank.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
76491340,T-shirt (S),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",\\"[\\"\\"<p>A classic tee for a timeless look, at a great price. Feel like a million bucks without breaking the bank.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
11511539,T-shirt (L),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",\\"[\\"\\"<p>One style fits all. Get a look that works even when you are taking it easy. Relaxed wear for the masses.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
38254631,T-shirt (M),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",\\"[\\"\\"<p>One style fits all. Get a look that works even when you are taking it easy. Relaxed wear for the masses.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
81115323,T-shirt (S),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",\\"[\\"\\"<p>One style fits all. Get a look that works even when you are taking it easy. Relaxed wear for the masses.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
84192227,T-shirt (XL),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",\\"[\\"\\"<p>One style fits all. Get a look that works even when you are taking it easy. Relaxed wear for the masses.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
91642659,T-shirt (XXL),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",\\"[\\"\\"<p>One style fits all. Get a look that works even when you are taking it easy. Relaxed wear for the masses.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
35342696,T-shirt (L),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",\\"[\\"\\"<p>Your t-shirt is your second skin. It’s the version of you that you show to the world. Wear one that flows with your movements and is built to last.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
45179543,T-shirt (XXL),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",\\"[\\"\\"<p>Your t-shirt is your second skin. It’s the version of you that you show to the world. Wear one that flows with your movements and is built to last.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
68848129,T-shirt (M),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",\\"[\\"\\"<p>Your t-shirt is your second skin. It’s the version of you that you show to the world. Wear one that flows with your movements and is built to last.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
77306807,T-shirt (S),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",\\"[\\"\\"<p>Your t-shirt is your second skin. It’s the version of you that you show to the world. Wear one that flows with your movements and is built to last.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
98935349,T-shirt (XL),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",\\"[\\"\\"<p>Your t-shirt is your second skin. It’s the version of you that you show to the world. Wear one that flows with your movements and is built to last.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
29810068,T-shirt (S),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",\\"[\\"\\"<p>Want to look like you just fell out of bed? Sometimes style can be effortless. Throw it on get on with having a good day.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
42680611,T-shirt (L),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",\\"[\\"\\"<p>Want to look like you just fell out of bed? Sometimes style can be effortless. Throw it on get on with having a good day.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
57917658,T-shirt (M),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",\\"[\\"\\"<p>Want to look like you just fell out of bed? Sometimes style can be effortless. Throw it on get on with having a good day.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
72289815,T-shirt (XL),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",\\"[\\"\\"<p>Want to look like you just fell out of bed? Sometimes style can be effortless. Throw it on get on with having a good day.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
98653891,T-shirt (XXL),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",\\"[\\"\\"<p>Want to look like you just fell out of bed? Sometimes style can be effortless. Throw it on get on with having a good day.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
10404946,White Hoodie (XL),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",\\"[\\"\\"<p>Get your slouch on and be seen with a whiter than white hoodie straight from the streets. Relaxed stylin’ and profilin’ with flair.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
35994675,White Hoodie (L),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",\\"[\\"\\"<p>Get your slouch on and be seen with a whiter than white hoodie straight from the streets. Relaxed stylin’ and profilin’ with flair.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
36334412,White Hoodie (M),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",\\"[\\"\\"<p>Get your slouch on and be seen with a whiter than white hoodie straight from the streets. Relaxed stylin’ and profilin’ with flair.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
45507483,White Hoodie (XXL),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",\\"[\\"\\"<p>Get your slouch on and be seen with a whiter than white hoodie straight from the streets. Relaxed stylin’ and profilin’ with flair.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
70760297,White Hoodie (S),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",\\"[\\"\\"<p>Get your slouch on and be seen with a whiter than white hoodie straight from the streets. Relaxed stylin’ and profilin’ with flair.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
987126191,White Parrot Cushion (45cm x 45cm),\\"Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what
others do, set your own monochrome trends with Saleor designs.\\",\\"[\\"\\"<p>Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what others do, set your own monochrome trends with Saleor designs.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cuschion02.png,,www.storefront.comwhite-parrot-cushion,5 USD,4 USD,new,,undefined,,in stock,
998223590,White Parrot Cushion (55cm x 55cm),\\"Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what
others do, set your own monochrome trends with Saleor designs.\\",\\"[\\"\\"<p>Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what others do, set your own monochrome trends with Saleor designs.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_cuschion02.png,,www.storefront.comwhite-parrot-cushion,5 USD,4 USD,new,,undefined,,in stock,
918223582,White Plimsolls (45),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",\\"[\\"\\"<p>PE at school wouldn’t have been such a drag with these on your feet. Slip on the style and stride tall with Saleor branded plimsolls. PE now stands for pretty elegant.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,2 KG,in stock,
918323583,White Plimsolls (40),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",\\"[\\"\\"<p>PE at school wouldn’t have been such a drag with these on your feet. Slip on the style and stride tall with Saleor branded plimsolls. PE now stands for pretty elegant.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,2 KG,in stock,
978223582,White Plimsolls (41),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",\\"[\\"\\"<p>PE at school wouldn’t have been such a drag with these on your feet. Slip on the style and stride tall with Saleor branded plimsolls. PE now stands for pretty elegant.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,1 KG,in stock,
993223583,White Plimsolls (40),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",\\"[\\"\\"<p>PE at school wouldn’t have been such a drag with these on your feet. Slip on the style and stride tall with Saleor branded plimsolls. PE now stands for pretty elegant.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,1 KG,in stock,
1231998121,White Wine,\\"Watch the slow setting sun of a wild summer evening sink into the horizon as you
sip white wine that tastes like bittersweet memories of halcyon days.\\",\\"[\\"\\"<p>Watch the slow setting sun of a wild summer evening sink into the horizon as you sip white wine that tastes like bittersweet memories of halcyon days.</p>\\"\\"]\\",,,www.storefront.comwhite-wine,5 USD,4.5 USD,new,,undefined,,in stock,
398323583,Yellow Plimsolls (39),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",\\"[\\"\\"<p>Mellow yellow. Step into summer with Saleor. Every time your head goes down, you see these beauties, and your mood bounces right back up.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323584,Yellow Plimsolls (40),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",\\"[\\"\\"<p>Mellow yellow. Step into summer with Saleor. Every time your head goes down, you see these beauties, and your mood bounces right back up.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323585,Yellow Plimsolls (41),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",\\"[\\"\\"<p>Mellow yellow. Step into summer with Saleor. Every time your head goes down, you see these beauties, and your mood bounces right back up.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323586,Yellow Plimsolls (42),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",\\"[\\"\\"<p>Mellow yellow. Step into summer with Saleor. Every time your head goes down, you see these beauties, and your mood bounces right back up.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323588,Yellow Plimsolls (43),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",\\"[\\"\\"<p>Mellow yellow. Step into summer with Saleor. Every time your head goes down, you see these beauties, and your mood bounces right back up.</p>\\"\\"]\\",http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
"
`;

exports[`productdatafeed generates a feed for googlemerchant 1`] = `
"id,title,description,rich_text_description,image_link,additional_image_link,link,price,sale_price,condition,gtin,brand,unit_pricing_measure,availability,google_product_category
43226647,Apple Juice (1l),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
80884671,Apple Juice (2l),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
93855755,Apple Juice (500ml),\\"Fell straight from the tree, on to Newton’s head, then into the bottle. The
autumn taste of English apples. Brought to you by gravity.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06_47yM7nB.png,,www.storefront.comapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
27512590,Banana Juice (1l),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
40636347,Banana Juice (2l),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
45328412,Banana Juice (500ml),\\"Build your protein the natural way, with exotic banana juice made from ripe
fruit and packed with all the goodness of the tropical sun.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_01.png,,www.storefront.combanana-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
21438542,Bean Juice (2l),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
57211177,Bean Juice (500ml),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
57423879,Bean Juice (1l),\\"Bean there, drunk that! The energy drink for the health-conscious. Brand new
bean juice; from allotment to bottle in under 8 hours.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02_cImOHi6.png,,www.storefront.combean-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
19230637,Black Hoodie (XL),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
22119503,Black Hoodie (L),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
61630747,Black Hoodie (XXL),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
62783187,Black Hoodie (S),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
91406604,Black Hoodie (M),\\"Special offer. Buy a hood and get a free jet black sweater attached. Perfect for
when you are up to no good.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo01_1.png,,www.storefront.comblack-hoodie,5 USD,5 USD,new,,undefined,,in stock,
15744278,Blue Hoodie (S),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
21599567,Blue Hoodie (M),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
43313080,Blue Hoodie (XXL),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
51987722,Blue Hoodie (XL),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
65363253,Blue Hoodie (L),\\"Special offer. Buy a superhero blue sweater and get a free hood attached. Ideal
for when you are out saving the world.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo02_1.png,,www.storefront.comblue-hoodie,5 USD,5 USD,new,,undefined,,in stock,
14925419,Carrot Juice (1l),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
62426105,Carrot Juice (2l),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
67882967,Carrot Juice (500ml),\\"Improve your eyesight the natural way with 100% pure, squeezed carrot juice. The
sweet, orange nectar of Mother Earth.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_05.png,,www.storefront.comcarrot-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
3944859,Coconut Juice (500ml),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
5829405,Coconut Juice (1l),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
84725784,Coconut Juice (2l),\\"Did you know falling coconuts kill 150 people a year? But did you know that
coconut juice is the new superfood? You win some, you lose some.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_02.png,,www.storefront.comcoconut-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
118223591,Code Division T-shirt (L),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
3128223583,Code Division T-shirt (XXL),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
338223582,Code Division T-shirt (M),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
448323583,Code Division T-shirt (XL),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
988323583,Code Division T-shirt (S),\\"Pay homage to the music and art of a Joy Division and Peter Saville, but with a
Mirumee twist. Perfect live transmission apparel for dead souls.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot07_1.png,,www.storefront.comcode-division-t-shirt,5 USD,4 USD,new,,undefined,,in stock,
698223581,Colored Parrot Cushion (55cm x 55cm),\\"Add a little color to your life with a Saleor parrot cushion. Turns any old sofa
into a rainbow of classy interior design.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cuschion01.png,,www.storefront.comcolored-parrot-cushion,5 USD,3 USD,new,,undefined,,in stock,
698223582,Colored Parrot Cushion (45cm x 45cm),\\"Add a little color to your life with a Saleor parrot cushion. Turns any old sofa
into a rainbow of classy interior design.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cuschion01.png,,www.storefront.comcolored-parrot-cushion,20 USD,12 USD,new,,undefined,,in stock,
30635751,Green Juice (2l),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,7 USD,6.3 USD,new,,undefined,2 KG,in stock,
60752428,Green Juice (500ml),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,5 USD,4.5 USD,new,,undefined,1 KG,in stock,
81470859,Green Juice (1l),\\"Brussel sprouts, spinach, peas, kale, lettuce, cabbage, zucchini, more brussel
sprouts. All the greens you’ll ever need in one delicious juice.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_04.png,,www.storefront.comgreen-juice,5 USD,4.5 USD,new,,undefined,1 KG,in stock,
998423582,Hyperspace Turquoise Paint (1l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998423583,Hyperspace Turquoise Paint (2.5l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,30 USD,30 USD,new,,undefined,2.5 KG,in stock,
998423585,Hyperspace Turquoise Paint (5l),\\"Turquoise is the new black. No more gloomy night skies, brighten up your
evenings with hyperspace paint.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_05.png,,www.storefront.comhyperspace-turquoise-paint,49 USD,49 USD,new,,undefined,5 KG,in stock,
lake-tunes-cd,Lake Tunes (CD / Signed: Yes),Lake Tunes by Digital Audio.,,http://saleor.eci:8000/media/products/saleor-digital-03_2.png,,www.storefront.comlake-tunes,9.99 USD,6 USD,new,,undefined,,in stock,
998323582,Light Speed Yellow Paint (1l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998323583,Light Speed Yellow Paint (2.5l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,30 USD,30 USD,new,,undefined,2.5 KG,in stock,
998323584,Light Speed Yellow Paint (5l),\\"There is life in outer space. This vibrant light speed yellow paint brings life
to any surface. Goes on easy and dries at light speed.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_04.png,,www.storefront.comlight-speed-yellow-paint,49 USD,49 USD,new,,undefined,5 KG,in stock,
33963052,Mustard Hoodie (S),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
42651772,Mustard Hoodie (XXL),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
55365141,Mustard Hoodie (L),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
66846240,Mustard Hoodie (M),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
73186143,Mustard Hoodie (XL),\\"Who dunnit? It was Colonel Mustard, in the dining room, with the lead piping,
wearing this hot as mustard hoodie.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo03_1.png,,www.storefront.commustard-hoodie,5 USD,3 USD,new,,undefined,,in stock,
546451996,Nebula Night Sky Paint (1l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,15 USD,9 USD,new,,undefined,1 KG,in stock,
546451997,Nebula Night Sky Paint (2.5l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,35 USD,21 USD,new,,undefined,2.5 KG,in stock,
546451999,Nebula Night Sky Paint (5l),\\"Tonight, my love, let us take fat brushes and paint the skies with the shades of
nebula tides. Get the dark, moody shades of the ether.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_01.png,,www.storefront.comnebula-night-sky-paint,49 USD,29.4 USD,new,,undefined,5 KG,in stock,
938323582,Orange Juice (1l),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
988323522,Orange Juice (2l),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
988323582,Orange Juice (500ml),\\"Fell from a tree straight into the bottle. No additives, no preservatives, just
the refreshing taste of pure sun-kissed Californian oranges.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_06.png,,www.storefront.comorange-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
43200242,Pineapple Juice (500ml),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
75799450,Pineapple Juice (2l),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,7 USD,7 USD,new,,undefined,2 KG,in stock,
79129513,Pineapple Juice (1l),\\"I can’t stand pineapples, so this one is not for me. They have a weird, fluffy,
tangy taste. But if it is your kind of thing, then knock yourself out.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03.png,,www.storefront.compineapple-juice,5 USD,5 USD,new,,undefined,1 KG,in stock,
29716755,Polo Shirt (S),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
31352185,Polo Shirt (XL),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
50269944,Polo Shirt (L),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
66594736,Polo Shirt (M),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
85364796,Polo Shirt (XXL),\\"Ever have those days where you feel a bit geometric? Can't quite shape yourself
up right? Show your different sides with a Saleor styles.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo01.png,,www.storefront.compolo-shirt,5 USD,5 USD,new,,undefined,,in stock,
43659438,Polo Shirt (XL),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
44026421,Polo Shirt (S),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
59014392,Polo Shirt (L),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
60597697,Polo Shirt (XXL),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
90892602,Polo Shirt (M),\\"Polo? Yolo… so don’t waste time on the wrong apparel. Choose a polo shirt that
looks as good as you feel.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo02.png,,www.storefront.compolo-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
17570141,Polo Shirt (XXL),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
19402012,Polo Shirt (XL),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
26592266,Polo Shirt (S),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
36260498,Polo Shirt (M),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
37558859,Polo Shirt (L),\\"Wondering if this will look as good on you as it does on the screen? The answer
is yes. A quality polo with smart styling.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo03-woman.png,,www.storefront.compolo-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
46806935,Polo Shirt (M),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
71103052,Polo Shirt (L),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
84812015,Polo Shirt (XL),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
89820261,Polo Shirt (XXL),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
98530976,Polo Shirt (S),\\"They say polo is the sport of kings. Or was that stamp collecting? Either way,
this shirt is fit for a king of Saturday night.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_polo04-woman.png,,www.storefront.compolo-shirt-4,5 USD,3 USD,new,,undefined,,in stock,
70058446,Power Juice (500ml),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
80696397,Power Juice (2l),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,7 USD,4.2 USD,new,,undefined,2 KG,in stock,
94044081,Power Juice (1l),\\"Is it a bird? Is a plane? No! It’s some jacked dude who just sucked down a
bottle of our brand new power juice! Look at him go!\\",,http://saleor.eci:8000/media/products/saleordemoproduct_fd_juice_03_GmQKGRq.png,,www.storefront.compower-juice,5 USD,3 USD,new,,undefined,1 KG,in stock,
998223582,Red Dwarf Red Paint (1l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,15 USD,13.5 USD,new,,undefined,1 KG,in stock,
998223583,Red Dwarf Red Paint (2.5l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,25 USD,22.5 USD,new,,undefined,2.5 KG,in stock,
998223584,Red Dwarf Red Paint (5l),\\"We are all connected to the universe, because every cell in our bodies was
cooked in the hearts of dying stars. Red Dwarf Paint: the color of Carl Sagan’s
dreams.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_03.png,,www.storefront.comred-dwarf-red-paint,49 USD,44.1 USD,new,,undefined,5 KG,in stock,
12312312321,Red Wine,\\"A fine, mature red with a hint of blackberry, an undertone of the alkaline
Burgundy soil, a delicate aftertaste of burnt garlic, and a whole lot of grapes.\\",,,,www.storefront.comred-wine,5 USD,3 USD,new,,undefined,,in stock,
sea-lullabies-mp3,Sea Lullabies (MP3),Sea Lullabies by Digital Audio.,,http://saleor.eci:8000/media/products/saleor-digital-03_1.png,,www.storefront.comsea-lullabies,9.99 USD,6 USD,new,,undefined,,in stock,
98616713,Seaman Beer,\\"Best beer on the seven seas. A dark ale for when the dark clouds gather
overhead. The nutty nautical taste that sailors love.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_beer-01_2.png,,www.storefront.comseaman-beer,5 USD,5 USD,new,,undefined,1 KG,in stock,
98616712,Seaman Lager,\\"Find your sea legs and then lose the power to use them with extra strong
seaman’s lager. Don’t drink and sail, me hearties!\\",,http://saleor.eci:8000/media/products/saleordemoproduct_beer-02_2.png,,www.storefront.comseaman-lager,5 USD,4 USD,new,,undefined,1 KG,in stock,
998223591,Space Dust Navy Paint (1l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,15 USD,15 USD,new,,undefined,1 KG,in stock,
998223594,Space Dust Navy Paint (5l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,49 USD,49 USD,new,,undefined,1 KG,in stock,
998223599,Space Dust Navy Paint (2.5l),\\"The rich, deep hue of space dust. Vacuum packed and airlocked for long-lasting
freshness of color.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_paints_02.png,,www.storefront.comspace-dust-navy-paint,25 USD,25 USD,new,,undefined,1 KG,in stock,
21522631,T-shirt (XXL),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
28094954,T-shirt (L),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
40232182,T-shirt (XL),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
55101176,T-shirt (M),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
76491340,T-shirt (S),\\"A classic tee for a timeless look, at a great price. Feel like a million bucks
without breaking the bank.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot03_1.png,,www.storefront.comt-shirt,5 USD,5 USD,new,,undefined,,in stock,
11511539,T-shirt (L),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
38254631,T-shirt (M),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
81115323,T-shirt (S),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
84192227,T-shirt (XL),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
91642659,T-shirt (XXL),\\"One style fits all. Get a look that works even when you are taking it easy.
Relaxed wear for the masses.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot01_1.png,,www.storefront.comt-shirt-2,5 USD,5 USD,new,,undefined,,in stock,
35342696,T-shirt (L),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
45179543,T-shirt (XXL),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
68848129,T-shirt (M),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
77306807,T-shirt (S),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
98935349,T-shirt (XL),\\"Your t-shirt is your second skin. It’s the version of you that you show to the
world. Wear one that flows with your movements and is built to last.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1_t0rIgUx.png,,www.storefront.comt-shirt-3,5 USD,5 USD,new,,undefined,,in stock,
29810068,T-shirt (S),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
42680611,T-shirt (L),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
57917658,T-shirt (M),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
72289815,T-shirt (XL),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
98653891,T-shirt (XXL),\\"Want to look like you just fell out of bed? Sometimes style can be effortless.
Throw it on get on with having a good day.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_boot06_1.png,,www.storefront.comt-shirt-4,5 USD,5 USD,new,,undefined,,in stock,
10404946,White Hoodie (XL),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
35994675,White Hoodie (L),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
36334412,White Hoodie (M),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
45507483,White Hoodie (XXL),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
70760297,White Hoodie (S),\\"Get your slouch on and be seen with a whiter than white hoodie straight from the
streets. Relaxed stylin’ and profilin’ with flair.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cl_bogo04_1.png,,www.storefront.comwhite-hoodie,5 USD,4 USD,new,,undefined,,in stock,
987126191,White Parrot Cushion (45cm x 45cm),\\"Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what
others do, set your own monochrome trends with Saleor designs.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cuschion02.png,,www.storefront.comwhite-parrot-cushion,5 USD,4 USD,new,,undefined,,in stock,
998223590,White Parrot Cushion (55cm x 55cm),\\"Minimalist interiors need simple, sleek soft furnishings. Don’t parrot what
others do, set your own monochrome trends with Saleor designs.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_cuschion02.png,,www.storefront.comwhite-parrot-cushion,5 USD,4 USD,new,,undefined,,in stock,
918223582,White Plimsolls (45),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,2 KG,in stock,
918323583,White Plimsolls (40),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,2 KG,in stock,
978223582,White Plimsolls (41),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,1 KG,in stock,
993223583,White Plimsolls (40),\\"PE at school wouldn’t have been such a drag with these on your feet. Slip on the
style and stride tall with Saleor branded plimsolls. PE now stands for pretty
elegant.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_02_1.png,,www.storefront.comwhite-plimsolls,5 USD,5 USD,new,,undefined,1 KG,in stock,
1231998121,White Wine,\\"Watch the slow setting sun of a wild summer evening sink into the horizon as you
sip white wine that tastes like bittersweet memories of halcyon days.\\",,,,www.storefront.comwhite-wine,5 USD,4.5 USD,new,,undefined,,in stock,
398323583,Yellow Plimsolls (39),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323584,Yellow Plimsolls (40),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323585,Yellow Plimsolls (41),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323586,Yellow Plimsolls (42),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
398323588,Yellow Plimsolls (43),\\"Mellow yellow. Step into summer with Saleor. Every time your head goes down, you
see these beauties, and your mood bounces right back up.\\",,http://saleor.eci:8000/media/products/saleordemoproduct_sneakers_01_1.png,,www.storefront.comyellow-plimsolls,5 USD,5 USD,new,,undefined,,in stock,
"
`;
